# pyproject.toml
[project]
name = "comfy-preview-model" # Unique identifier for your node. Immutable after creation.
description = ""
version = "1.0.0" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/jupo-ai/comfy-preview-model"

[tool.comfy]
PublisherId = "jupo-ai" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "comfy-preview-model" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)